# grammagem

./: .gitignore  Package.resolved  Package.swift
AppSupport/: mlx.metallib
Sources/CHarper/: shim.c
Sources/CHarper/include/: harper.h  module.modulemap
Sources/GrammaGem/AI/: ModelManager.swift
Sources/GrammaGem/App/: AppState.swift  GrammaGemApp.swift  MenuBarContent.swift  OnboardingView.swift
Sources/GrammaGem/App/MainWindow/: ExclusionsView.swift  LiveCheckView.swift  (+1 more)
Sources/GrammaGem/Grammar/: GrammarEngine.swift  SystemGrammarEngine.swift
Sources/GrammaGem/Stats/: UsageStats.swift
Sources/GrammaGem/System/: AppDetector.swift  Exclusions.swift  LiveMonitor.swift  TextCapture.swift  TextFieldScanner.swift
Sources/GrammarGem/AI/: AIEngine.swift  AIPromptKit.swift  CustomModesStore.swift  MLXEngine.swift  ModelManager.swift  OllamaEngine.swift
Sources/GrammarGem/App/: AppState.swift  GrammarGemApp.swift
Sources/GrammarGem/Core/: AppConfig.swift  Models.swift
Sources/GrammarGem/Grammar/: HarperEngine.swift  WritingScore.swift
Sources/GrammarGem/Licensing/: LemonSqueezyClient.swift
Sources/GrammarGem/System/: AXSupport.swift  LiveMonitor.swift  LocalEngineServer.swift  Permissions.swift  TextCapture.swift  TextFieldScanner.swift  TextReplacementCoordinator.swift
Tests/GrammaGemTests/: GrammaGemTests.swift
Tests/GrammarGemTests/: GrammarGemTests.swift
docs/: grammarly-value-plan.md
harper-ffi/: Cargo.toml  build.sh
harper-ffi/include/: harper.h
harper-ffi/src/: lib.rs
scripts/: build-metallib.sh  build.sh  sign-notarize.sh
(+3 files in other folders)
